dcc/src/front_end/parse/parse_func.c
//===========================================================================
// parse_func.c
//   Copyright (C) 2013 Free Software Foundation, Inc.
//   Originally by ZhaoFeng Liang <zhf.liang@outlook.com>
//
//This file is part of DTAHS_DCC.
//
//DTAHS_DCC is free software; you can redistribute it and/or modify
//it under the terms of the GNU General Public License as published by
//the Free Software Foundation; either version 2 of the License, or 
//(at your option) any later version.
//
//DTAHS_DCC is distributed in the hope that it will be useful,
//but WITHOUT ANY WARRANTY; without even the implied warranty of
//MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
//GNU General Public License for more details.
//
//You should have received a copy of the GNU General Public License
//along with DTHAS; If not, see <http://www.gnu.org/licenses/>.  
//===========================================================================

#include	"dcc_global.h"
#include	"dcc_type.h"
#include	"dcc_symtbl.h"
#include	<stdio.h>
#include	"dcc_prototype.h"
#include	"dcc_main.h"
#include	"dcc_lex_char.h"
#include	"dcc_lex_word.h"
#include	"dcc_parse.h"
#include	"dcc_seman.h"
#include	"dcc_label.h"
#include	"dcc_ir.h"
#include	"dcc_frame.h"

PRIVATE	s8	production_tab_info[PARSE_PRODUCTIONS][IDEN_LEN]	= {
	"primary_expression", "postfix_expression", "argument_expression_list", "unary_expression", "unary_operator", 
	"cast_expression", "multiplicative_expression", "additive_expression", "shift_expression", "relational_expression", 
	"equality_expression", "and_expression", "exclusive_or_expression", "inclusive_or_expression", "logical_and_expression", 
	"logical_or_expression", "conditional_expression", "assignment_expression", "assignment_operator", "expression", 
	"constant_expression", "declaration", "declaration_specifiers", "init_declarator_list", "init_declarator", 
	"storage_class_specifier", "type_specifier", "struct_or_union_specifier", "struct_or_union", "struct_declaration_list", 
	"struct_declaration", "specifier_qualifier_list", "struct_declarator_list", "struct_declarator", "enum_specifier", 
	"enumerator_list", "enumerator", "type_qualifier", "declarator", "direct_declarator", 
	"pointer", "type_qualifier_list", "parameter_type_list", "parameter_list", "parameter_declaration", 
	"identifier_list", "type_name", "abstract_declarator", "direct_abstract_declarator", "initializer", 
	"initializer_list", "statement", "labeled_statement", "compound_statement", "declaration_list", 
	"statement_list", "expression_statement", "selection_statement", "iteration_statement", "jump_statement", 
	"translation_unit", "external_declaration", "function_definition",
	"postfix_expression_1","argument_expression_list_1","multiplicative_expression_1","additive_expression_1","shift_expression_1",
	"relational_expression_1","equality_expression_1","and_expression_1","exclusive_or_expression_1","inclusive_or_expression_1",
	"logical_and_expression_1","logical_or_expression_1","conditional_expression_1","expression_1","declaration_1",
	"declaration_specifiers_1","declaration_specifiers_2","init_declarator_list_1","init_declarator_1","struct_or_union_specifier_1",
	"struct_or_union_specifier_2","struct_or_union_specifier_3","struct_declaration_list_1","specifier_qualifier_list_1","specifier_qualifier_list_2",
	"struct_declarator_list_1","struct_declarator_1","struct_declarator_2","enum_specifier_1","enum_specifier_2",
	"enumerator_list_1","enumerator_1","direct_declarator_1","direct_declarator_2","direct_declarator_3",
	"direct_declarator_4","pointer_1","pointer_2","type_qualifier_list_1","parameter_type_list_1",
	"parameter_list_1","parameter_declaration_1","identifier_list_1","type_name_1","abstract_declarator_1",
	"abstract_declarator_2","direct_abstract_declarator_1","direct_abstract_declarator_2","direct_abstract_declarator_3","direct_abstract_declarator_4",
	"initializer_1","initializer_2","initializer_list_1","compound_statement_1","compound_statement_2",
	"declaration_list_1","statement_list_1","selection_statement_1","selection_statement_2","iteration_statement_1",
	"jump_statement_1","translate_unit_1","function_definition_1","function_definition_2","function_definition_3",
	"function_definition_4"};


PRIVATE	struct ir_exp *	primary_expression(struct ir_exp *exp);
PRIVATE	struct ir_exp *	postfix_expression();
PRIVATE	struct ir_exp *	postfix_expression_1(struct ir_exp *exp);
PRIVATE	struct ir_exp *	argument_expression_list();
PRIVATE	struct ir_exp *	argument_expression_list_1(struct ir_exp *exp);
PRIVATE	struct ir_exp *	unary_expression();
PRIVATE	s32	unary_operator();
PRIVATE	struct ir_exp *	cast_expression();
PRIVATE	struct ir_exp *	multiplicative_expression();
PRIVATE	struct ir_exp *	multiplicative_expression_1(struct ir_exp *exp);
PRIVATE	struct ir_exp *	additive_expression();
PRIVATE	struct ir_exp *	additive_expression_1(struct ir_exp *exp);
PRIVATE	struct ir_exp *	shift_expression();
PRIVATE	struct ir_exp *	shift_expression_1(struct ir_exp *exp);
PRIVATE	struct ir_exp *	relational_expression();
PRIVATE	struct ir_exp *	relational_expression_1(struct ir_exp *exp);
PRIVATE	struct ir_exp *	equality_expression();
PRIVATE	struct ir_exp *	equality_expression_1(struct ir_exp *exp);
PRIVATE	struct ir_exp *	and_expression();
PRIVATE	struct ir_exp *	and_expression_1(struct ir_exp *exp);
PRIVATE	struct ir_exp *	exclusive_or_expression();
PRIVATE	struct ir_exp *	exclusive_or_expression_1(struct ir_exp *exp);
PRIVATE	struct ir_exp *	inclusive_or_expression();
PRIVATE	struct ir_exp *	inclusive_or_expression_1(struct ir_exp *exp);
PRIVATE	struct ir_exp *	logical_and_expression();
PRIVATE	struct ir_exp *	logical_and_expression_1(struct ir_exp *exp);
PRIVATE	struct ir_exp *	logical_or_expression();
PRIVATE	struct ir_exp *	logical_or_expression_1(struct ir_exp *exp);
PRIVATE	struct ir_exp *	conditional_expression();
PRIVATE	struct ir_exp *	conditional_expression_1(struct ir_exp *exp);
PRIVATE	struct ir_exp *	assignment_expression();
PRIVATE	s32	assignment_operator();
PRIVATE	struct ir_exp *	expression();
PRIVATE	struct ir_exp *	expression_1(struct ir_exp *exp);
PRIVATE	struct ir_exp *	constant_expression();
PRIVATE	void	declaration();
PRIVATE	void	declaration_1();
PRIVATE	void	declaration_specifiers();
PRIVATE	void	declaration_specifiers_1();
PRIVATE	void	declaration_specifiers_2();
PRIVATE	void	init_declarator_list();
PRIVATE	void	init_declarator_list_1();
PRIVATE	void	init_declarator();
PRIVATE	void	init_declarator_1();
PRIVATE	void	storage_class_specifier();
PRIVATE	void	type_specifier();
PRIVATE	void	struct_or_union_specifier();
PRIVATE	void	struct_or_union_specifier_1();
PRIVATE	void	struct_or_union_specifier_2();
PRIVATE	void	struct_or_union_specifier_3();
PRIVATE	void	struct_or_union();
PRIVATE	void	struct_declaration_list();
PRIVATE	void	struct_declaration_list_1();
PRIVATE	void	struct_declaration();
PRIVATE	void	specifier_qualifier_list();
PRIVATE	void	specifier_qualifier_list_1();
PRIVATE	void	specifier_qualifier_list_2();
PRIVATE	void	struct_declarator_list();
PRIVATE	void	struct_declarator_list_1();
PRIVATE	void	struct_declarator();
PRIVATE	void	struct_declarator_1();
PRIVATE	void	struct_declarator_2();
PRIVATE	void	enum_specifier();
PRIVATE	void	enum_specifier_1();
PRIVATE	void	enum_specifier_2();
PRIVATE	void	enumerator_list();
PRIVATE	void	enumerator_list_1();
PRIVATE	void	enumerator();
PRIVATE	void	enumerator_1();
PRIVATE	void	type_qualifier();
PRIVATE	void	declarator();
PRIVATE	void	direct_declarator();
PRIVATE	void	direct_declarator_1();
PRIVATE	void	pointer();
PRIVATE	void	pointer_1();
PRIVATE	void	pointer_2();
PRIVATE	void	type_qualifier_list();
PRIVATE	void	type_qualifier_list_1();
PRIVATE	void	parameter_type_list();
PRIVATE	void	parameter_type_list_1();
PRIVATE	void	parameter_list();
PRIVATE	void	parameter_list_1();
PRIVATE	void	parameter_declaration();
PRIVATE	void	parameter_declaration_1();
PRIVATE	void	identifier_list();
PRIVATE	void	identifier_list_1();
PRIVATE	void	type_name();
PRIVATE	void	type_name_1();
PRIVATE	void	abstract_declarator();
PRIVATE	void	abstract_declarator_1();
PRIVATE	void	abstract_declarator_2();
PRIVATE	void	direct_abstract_declarator();
PRIVATE	void	direct_abstract_declarator_1();
PRIVATE	void	initializer();
PRIVATE	void	initializer_1();
PRIVATE	void	initializer_2();
PRIVATE	void	initializer_list();
PRIVATE	void	initializer_list_1();
PRIVATE struct ir_sts*	statement();
PRIVATE	struct ir_sts*	labeled_statement();
PRIVATE	struct ir_sts*	compound_statement();
PRIVATE	void	compound_statement_1();
PRIVATE	void	compound_statement_2();
PRIVATE	void	declaration_list();
PRIVATE	void	declaration_list_1();
PRIVATE	void	statement_list();
PRIVATE	void	statement_list_1();
PRIVATE	struct ir_sts*	expression_statement();
PRIVATE	struct ir_sts*	selection_statement();
PRIVATE	struct ir_sts *	selection_statement_1(struct ir_sts * sts, struct ir_exp *ret_exp, struct ir_sts * then_sts);
PRIVATE	struct ir_sts *	selection_statement_2(struct ir_sts * sts, struct ir_sts *else_sts);
PRIVATE	struct ir_sts*	iteration_statement();
PRIVATE	void	iteration_statement_1(struct ir_sts * ret_sts, struct ir_sts * sts, struct ir_exp *ret_exp);
PRIVATE	struct ir_sts*	jump_statement();
PRIVATE	void	jump_statement_1();
PRIVATE	void	translate_unit();
PRIVATE	void	translate_unit_1();
PRIVATE	void	external_declaration();
PRIVATE	void	function_definition();
PRIVATE	void	function_definition_1();
PRIVATE	void	function_definition_2();
PRIVATE	void	function_definition_3();
PRIVATE	void	function_definition_4();

#define	PARSE_DEBUG	
//===========================================================================
//parse_entry()
//===========================================================================
PUBLIC	void	parse_entry()
{
	translate_unit();
}


//===========================================================================
//primary_expression()
//===========================================================================
PRIVATE	struct ir_exp *	primary_expression(struct ir_exp *exp) 
{
//--------------------------
//test
#ifdef	PARSE_DEBUG
	printf("	-- primary_expression  -- \n");
#endif
//--------------------------

	//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
	struct ir_exp * ret_exp	= NULL;
	//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

	get_tok();

	if(!parse_production_tab[PRODUCTION_1][FIRST_SET][token])
	{
		printf("error:%s,token:%d\n",production_tab_info[PRODUCTION_1][IDEN_LEN],token);
		exit(1);
	}
	else if(token == OP_L_PARENTHESE)
	{
		//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
		ret_exp	= expression();
		//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

		get_tok();

		if(token != OP_R_PARENTHESE)
		{
			printf("error:%s,token:%d\n",production_tab_info[PRODUCTION_1][IDEN_LEN],token);
			exit(1);
		}		
	}
	else if(token == IDENTIFIER)
	{
		//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
		if(!symtbl_search_s(p_cur_token->val_s, function_id))
		{
			if(!symtbl_search(p_cur_token->val_s))
			{
				printf("\n[error]::primary_exp::variable(%s) not define in function(%d)!! exit\n\n",p_cur_token->val_s, function_id);
				exit(1);
			}			
		}

		
		//not a function
		if(!framelist_search_s(p_cur_token->val_s))
		{				
			cur_var	= search_var_s(p_cur_token->val_s);

			if(!cur_var)
			{
				printf("\n[error]::primary_exp::cur_var(%s) not define in !! exit\n\n",p_cur_token->val_s);
				exit(1);
			}
				 
			if(cur_var->type_id == STRUCT)
			{													
			}
	
			ret_exp	= ir_var_exp_build(cur_var);
		}
							
		//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
	}
	else if(token == CONST_STRING)
	{
		//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
		strcopy(&(sym_t.val_s),p_cur_token->val_s);
		sym_t.val_s[strlen(&(sym_t.val_s))]	= NULL;

		if(flg_val_func)
		{
			if(symtbl_search(p_tmp_token->val_s))		// during declaring an array, the symbol is not in symbol table now
			{
				ir_fun_exp_update(exp, p_cur_token->val_s);				
			}
		}
		else
		{
			ret_exp	= ir_string_exp_build(sym_t.val_s);
		}
		//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
	}
	else
	{
		//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
		sym_t.val_i	= s2i(p_cur_token->val_s);		
		ret_exp		= ir_const_exp_build(sym_t.val_i);		
		//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
	}	

	return ret_exp;	
}


//===========================================================================
//postfix_expression() 
//===========================================================================
PRIVATE	struct ir_exp *	postfix_expression() 
{
//--------------------------
//test
#ifdef	PARSE_DEBUG
	printf("	-- postfix_expression  -- \n");
#endif
//--------------------------	

	//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
	struct ir_exp *ret_exp	= primary_expression(ret_exp);
	
	ret_exp	= postfix_expression_1(ret_exp);	

	return ret_exp;
	//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
}

//===========================================================================
//PRIVATE	void	postfix_expression_1()
//===========================================================================
PRIVATE	struct ir_exp *	postfix_expression_1(struct ir_exp *exp)
{
//--------------------------
//test
#ifdef	PARSE_DEBUG
	printf("	-- postfix_expression_1  -- \n");
#endif
//--------------------------

	//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
	struct ir_exp *	ret_exp;
	//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

	get_tok();	

	if(!parse_production_tab[PRODUCTION_64][FIRST_SET][token]) 
	{
		if(!parse_production_tab[PRODUCTION_64][FOLLOW_SET][token])
		{
			uget_tok(1);
			return exp;
		}
		else
		{
			//
		}
	}

	switch(token)
	{
		case OP_DOT:
			//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
			p_tmp_token	= p_pre_token;

			ret_exp	= ir_postfix_exp_build(0, NULL, NULL);

			ret_exp->e.postfix.op	= IR_STRUCT;
			//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

			get_tok();
			if(token == IDENTIFIER)
			{
				//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
				is_struct();	
				
				ret_exp->e.postfix.left	= ir_var_exp_update(exp, p_cur_token->val_s, IR_STRUCT);
				
				ret_exp->e.postfix.right	= NULL;		
				
				ret_exp	= postfix_expression_1(ret_exp);

				return ret_exp;
				//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
			}
			else
			{
				printf("error:%s,token:%d\n",production_tab_info[PRODUCTION_64][IDEN_LEN],token);
				exit(1);
			}
			break;

		case OP_POINTOR:
			//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
			p_tmp_token	= p_pre_token;

			flg_val_pointer	= TRUE;	

			ret_exp	= ir_postfix_exp_build(0, NULL, NULL);
			
			ret_exp->e.postfix.op	= IR_POINTER;
			//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

			get_tok();
			if(token == IDENTIFIER)
			{
				//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~				
				is_pointer();				
			
				ret_exp->e.postfix.left	= ir_var_exp_update(exp, p_cur_token->val_s, IR_POINTER);
				ret_exp->e.postfix.right= ir_string_exp_build(p_cur_token->val_s);
				
				ret_exp	= postfix_expression_1(ret_exp);

				return ret_exp;
				//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
			}
			else
			{
				printf("error:%s,token:%d\n",production_tab_info[PRODUCTION_64][IDEN_LEN],token);
				exit(1);
			}
			break;
		
		case OP_PLUS_PLUS:
			//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
			ret_exp	= ir_postfix_exp_build(0, NULL, NULL);

			ret_exp->e.postfix.op	= IR_INC;
			ret_exp->e.postfix.left	= exp;		//identifier, array name
			ret_exp->e.postfix.right= ir_const_exp_build(1);

			ret_exp	= postfix_expression_1(ret_exp);

			return ret_exp;
			//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

			break;

		case OP_MINUS_MINUS:			
			//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
			ret_exp	= ir_postfix_exp_build(0, NULL, NULL);

			ret_exp->e.postfix.op	= IR_DEC;
			ret_exp->e.postfix.left	= exp;		//identifier, array name
			ret_exp->e.postfix.right= ir_const_exp_build(1);

			ret_exp	= postfix_expression_1(ret_exp);

			return ret_exp;
			//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
			break;

		case OP_L_BRACKET:
			//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~			
			is_array();

			flg_val_array	= TRUE;	
			p_tmp_token	= p_pre_token;
			
			ret_exp	= ir_postfix_exp_build(0, NULL, NULL);

			ret_exp->e.postfix.left	= exp;		//identifier, array name
			ret_exp->e.postfix.op	= IR_ARRAY;
			
			ret_exp->e.postfix.right= expression();			
			//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

			get_tok();

			if(token == OP_R_BRACKET)
			{
				//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
				flg_val_array	= FALSE;			
				
				ret_exp	= postfix_expression_1(ret_exp);

				return ret_exp;
				//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
			}	
			else
			{
				printf("error:%s,token:%d\n\n",production_tab_info[PRODUCTION_64][IDEN_LEN],token);
				exit(1);
			}
			break;

		case OP_L_PARENTHESE:
			//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
			is_function();

			flg_val_func	= TRUE;	

			p_tmp_token	= p_pre_token;
			
			ret_exp	= ir_fun_exp_build(p_pre_token->val_s);			

			cur_parm_explist	= explist_build(NULL);			
			//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


			get_tok();

			if((!parse_production_tab[PRODUCTION_3][FIRST_SET][token]) && (token != OP_R_PARENTHESE))
			{
				printf("error:%s,token:%d\n",production_tab_info[PRODUCTION_64][IDEN_LEN],token);
				exit(1);
			}
			else if(token == OP_R_PARENTHESE)
			{
				//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
				flg_val_func	= FALSE;
				
				ret_exp->e.call.ppv	= NULL;

				ret_exp	= postfix_expression_1(ret_exp);

				return ret_exp;
				//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
			}			
			else
			{
				uget_tok(1);
				
				//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
				struct ir_exp *	ret_exp_1	= argument_expression_list(ret_exp_1);				
				//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

				get_tok();

				if(token == OP_R_PARENTHESE)
				{
					//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
					flg_val_func	= FALSE;
					
					ret_exp->e.call.ppv	= cur_parm_explist;								

					ret_exp	= postfix_expression_1(ret_exp);
					
					return ret_exp;
					//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
				}	
				else
				{
					printf("error:%s,token:%d\n",production_tab_info[PRODUCTION_64][IDEN_LEN],token);
					exit(1);
				}				
			}
			break;
		default:
			break;
	}

	return ret_exp;	
}

//===========================================================================
//PRIVATE	void	argument_expression_list()
//===========================================================================
PRIVATE	struct ir_exp *	argument_expression_list()
{
//--------------------------
//test
#ifdef	PARSE_DEBUG
	printf("	-- argument_expression_list  -- \n");
#endif
//--------------------------

	get_tok();

	if(!parse_production_tab[PRODUCTION_3][FIRST_SET][token])
	{
		printf("error:%s,token:%d\n",production_tab_info[PRODUCTION_3][IDEN_LEN],token);
		exit(1);
	}
	else
	{
		uget_tok(1);
		
		//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
		struct ir_exp *ret_exp 	= ir_assign_exp_build(0, NULL, NULL);

		ret_exp->e.assign.op	= IR_OP_NULL;
		ret_exp->e.assign.res	= assignment_expression();
		ret_exp->e.assign.val	= NULL;
		
		struct ir_explist * explist_t = explist_build(ret_exp);
		ir_add2explist(explist_t, cur_parm_explist);
		
		ret_exp 	= argument_expression_list_1(ret_exp);

		return ret_exp;
		//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
	}
}


//===========================================================================
//PRIVATE	void	argument_expression_list_1()
//===========================================================================
PRIVATE	struct ir_exp *	argument_expression_list_1(struct ir_exp *exp)
{
//--------------------------
//test
#ifdef	PARSE_DEBUG
	printf("	-- argument_expression_list_1  -- \n");
#endif
//--------------------------

	get_tok();

	if(!parse_production_tab[PRODUCTION_65][FIRST_SET][token])
	{
		if(!parse_production_tab[PRODUCTION_65][FOLLOW_SET][token])
		{
			uget_tok(1);
			return exp;
		}
		else
		{
			//
		}
	}
	else
	{
		//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
		flg_val_array	= FALSE;		
		flg_val_pointer	= FALSE;
		flg_val_struct_union	= FALSE;
		
		struct ir_exp *ret_exp 	= ir_assign_exp_build(0, NULL, NULL);

		ret_exp->e.assign.op	= IR_OP_NULL;		
		ret_exp->e.assign.res	= assignment_expression();
		ret_exp->e.assign.val	= NULL;
		
		struct ir_explist * explist_t = explist_build(ret_exp);
		ir_add2explist(explist_t, cur_parm_explist);
		
		ret_exp 	= argument_expression_list_1(ret_exp);

		return ret_exp;
		//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
	}
}

//===========================================================================
//PRIVATE	void	unary_expression()
//===========================================================================
PRIVATE	struct ir_exp *	unary_expression()
{
//--------------------------
//test
#ifdef	PARSE_DEBUG
	printf("	-- unary_expression  -- \n");
#endif
//--------------------------

	get_tok();

	if(parse_production_tab[PRODUCTION_2][FIRST_SET][token])
	{
		uget_tok(1);
		
		//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
		struct ir_exp *ret_exp	= postfix_expression();

		return ret_exp;
		//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
	}
	else if(parse_production_tab[PRODUCTION_5][FIRST_SET][token])
	{
		uget_tok(1);		

		//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
		struct ir_exp *ret_exp 	= ir_unary_exp_build(0, NULL);

		ret_exp->e.unary.op	= unary_operator();
		ret_exp->e.unary.left	= cast_expression();
		
		return ret_exp;
		//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
	}
	else if((token == OP_PLUS_PLUS)||(token == OP_MINUS_MINUS))
	{
		//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
		struct ir_exp *ret_exp 	= ir_unary_exp_build(0, NULL);

		ret_exp->e.unary.op	= token;
		ret_exp->e.unary.left	= unary_expression();
		ret_exp->e.unary.right	= ir_const_exp_build(1);
		
		return ret_exp;
		//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
	}
	else if(token == SIZEOF)
	{
		get_tok();

		if(token == OP_L_PARENTHESE)
		{
			get_tok();

			if(parse_production_tab[PRODUCTION_47][FIRST_SET][token])
			{
				uget_tok(1);
				
				type_name();
			
				get_tok();

				if(token != OP_R_PARENTHESE)
				{
					printf("error:%s,token:%d\n",production_tab_info[PRODUCTION_4][IDEN_LEN],token);
					exit(1);
				}

				//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
				struct ir_exp *ret_exp 	= ir_unary_exp_build(0, NULL);

				ret_exp->e.unary.op	= SIZEOF;
				ret_exp->e.unary.left	= NULL;
				
				return ret_exp;
				//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
			}
			else
			{
				printf("error:%s,token:%d\n",production_tab_info[PRODUCTION_4][IDEN_LEN],token);
				exit(1);
			}
		}
		else if(parse_production_tab[PRODUCTION_4][FIRST_SET][token])
		{
			uget_tok(1);			

			//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
			struct ir_exp *ret_exp 	= ir_unary_exp_build(0, NULL);

			ret_exp->e.unary.op	= token;	//sizeof
			ret_exp->e.unary.left	= unary_expression();
			
			return ret_exp;
			//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
		}
		else
		{
			printf("error:%s,token:%d\n",production_tab_info[PRODUCTION_4][IDEN_LEN],token);
			exit(1);
		}		
	}

	return NULL;
}

//===========================================================================
//PRIVATE	void	unary_operator()
//===========================================================================
PRIVATE	s32	unary_operator()
{
//--------------------------
//test
#ifdef	PARSE_DEBUG
	printf("	-- unary_operator  -- \n");
#endif
//--------------------------

	get_tok();

	if(!parse_production_tab[PRODUCTION_5][FIRST_SET][token])
	{
		printf("error:%s,token:%d\n",production_tab_info[PRODUCTION_5][IDEN_LEN],token);
		exit(1);
	}

	return token;	
}


//===========================================================================
// cast_expression()
//===========================================================================
PRIVATE	struct ir_exp *	cast_expression()
{
//--------------------------
//test
#ifdef	PARSE_DEBUG
	printf("	-- cast_expression  -- \n\n");
#endif
//--------------------------

	get_tok();
